fixes image spacing on small screens

--- a/assets/css/portfolio-gallery.css
+++ b/assets/css/portfolio-gallery.css
@@ -50,6 +50,12 @@ img {
     justify-content: center;
 }
 
+@media screen and (max-width: 768px) {
+    .col-md-4:not(:first-child) {
+        margin-top: 1em;
+    }
+}
+
 @media screen and (min-width: 768px) {
     .img-caption {
         top: 50%;
